--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hygen-import",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "license": "MIT",
   "bin": {
     "hygen-add": "dist/bin.js"
@@ -18,6 +18,7 @@
     "inquirer": "^5.1.0",
     "lodash": "^4.17.5",
     "ora": "^1.4.0",
+    "yargs-parser": "^9.0.2",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/lodash": "^4.14.102",
     "@types/node": "^9.4.4",
     "@types/ora": "^1.3.1",
+    "hygen-test-package": "^0.0.2",
     "tslint-config-prettier": "^1.7.0"
   }
 }
