--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "hygen-add": "dist/bin.js"
   },
   "scripts": {
-    "watch": "tsc -w",
+    "start": "tsc -w",
+    "release":
+      "yarn build && git commit -am 'build'; yarn version && git push --tags && git push origin master",
     "build": "tsc",
-    "start": "node dist/main.js",
+    "test": "node dist/main.js",
     "hygen-add": "node dist/bin.js"
   },
   "dependencies": {
