--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "start": "tsc -w",
-    "release": "yarn build && git commit -am 'build'; yarn version && git push --tags && git push origin master",
+    "release":
+      "yarn build && git commit -am 'build'; yarn version && git push --tags && git push origin master",
     "build": "tsc",
-    "test": "node dist/main.js",
+    "test": "node dist/bin.js",
     "hygen-add": "node dist/bin.js"
   },
   "dependencies": {
